# graphics-sandbox

./: .gitignore  .gitmodules  CMakeLists.txt
c++/include/: zip.hpp
core/: CMakeLists.txt
core/include/: coord.h  eigen_hash.h  eigen_ordering.h  kdop.h  kdop_util.h  types.h
core/src/: test_kdop.cpp
fem/block/: CMakeLists.txt
fem/block/include/: glutil.h  glwidget.h  lattice.h  mainwindow.h  qvoxelSolver.h  types.h  voxelSolver.h
fem/block/include/solvers/: cg.hpp  ldlt.hpp  linear.h  pcg.hpp
fem/block/shaders/: shaders.qrc  vertex.130.f.glsl  vertex.130.v.glsl
fem/block/src/: glwidget.cpp  lattice.cpp  lattice.hpp  linearElasticSolver.hpp  mainwindow.cpp  qvoxelSolver.cpp  testmain.cpp  voxelObject.hpp
geometry/: CMakeLists.txt
geometry/include/: config.h  types.h
geometry/include/fem/block/: linearElasticSolver.h  macros.h  voxelIterators.h  voxelObject.h
geometry/include/mac/core/: grid.h
geometry/include/mesh/: simplexmesh.h  trianglemesh.h
geometry/include/mesh/mesh2levelset/: meta.h  trianglemesh.h
geometry/include/mesh/mesh2voxel/: bucket.h  eigen_boost_serialization.hpp
geometry/include/util/: matrix_iterator.h
geometry/src/core/: linereader.cpp  test_kdop.cpp
geometry/src/fem/block/: linearElasticSolver.cpp  sidebar.cpp  voxelObject.cpp  voxelSolver.cpp
geometry/src/mesh/: trianglemesh.cpp
geometry/src/mesh/mesh2voxel/: lattice.cpp  latticemarcher.cpp  rayiterator.cpp  trianglemesh.cpp
geometry/src/mesh/mesh_plane_boolean/: main.cpp
geometry/src/openvdb/get_bbox/: main.cpp
include/: coord.h  coorditerator.h  types.h
include/core/: linereader.hpp  types.h
include/grid/: axisalignedgrid.h  embeddedgrid.h  grid.h  lerp.h  macgridfactory.h  traits.h  types.h
include/mesh/: genericwrapper.h  halfedge.h  hetrianglemesh.h  hetrianglemesh.ipl  hetriangletopology.h  loader.h  mesh_operatorbase.h  meshbase.h  meshconstructor.h  meshconstructor.ipl  meshexceptions.h  meshtopologybase.h  meshtopologyconstructor.h  meshtopologyconstructor.ipl  meshtraits.h  veftrianglemesh.h  vftrianglemesh.h  vftrianglemesh.ipl  vftriangletopology.h
include/openvdb/: vdb_conversion.h  vdb_utils.h
include/qt/: controls.h
include/render/: internalnode.h  scene.h  scenenode.h  transformnode.h
mac/core/: CMakeLists.txt
mac/core/include/: bboxiterator.h  grid.h  lerp.h  mac.h  macgridfactory.h  types.h
mac/core/src/: main.cpp
mac/sim/: CMakeLists.txt
mac/sim/include/: boundary.h  laplacian.h  rungekutta2.h
mac/sim/src/: stablefluids.cpp
mac/vis/: CMakeLists.txt
mac/vis/include/: glwidget.h  mainwindow.h
mac/vis/src/: demomain.cpp  glwidget.cpp  main.cpp  mainwindow.cpp
mesh/core/: CMakeLists.txt
mesh/core/include/: eigen_ordering.h  halfedge.h  hetrianglemesh.h  hetrianglemesh.ipl  hetriangletopology.h  loader.h  meshconstructor.h  meshconstructor.ipl  veftrianglemesh.h  veftrianglemesh.ipl  vftrianglemesh.h  vftrianglemesh.ipl
mesh/core/src/: compile.cpp  halfedge.cpp  hetrianglemesh.cpp  hetriangletests.cpp  hetriangletopology.cpp
mesh/kdtree/: CMakeLists.txt
mesh/kdtree/include/: kdtree.h
mesh/kdtree/src/: kdtree.cpp
mesh/mesh2levelset/: CMakeLists.txt
mesh/mesh2levelset/include/: lattice.h  levelset.h  meta.h
mesh/mesh2levelset/src/: lattice.cpp  levelset.cpp  main.cpp
mesh/mesh2voxel/: CMakeLists.txt
mesh/mesh2voxel/include/: bucket.h  lattice.h  latticemarcher.h  rayiterator.h
mesh/mesh2voxel/src/: bucket.cpp  lattice.cpp  main.cpp
mesh/mesh_plane_boolean/: CMakeLists.txt
mesh/mesh_plane_boolean/include/: plane.h
mesh/mesh_plane_boolean/src/: main.cpp  plane.cpp  trianglemesh.cpp
mesh/mesh_renderer/: CMakeLists.txt
mesh/mesh_renderer/include/: glwidget.h  mainwindow.h  mesh.h
mesh/mesh_renderer/shaders/: edgeshader.g.glsl  faceshader.g.glsl  noneshader.130.v.glsl  particle.f.glsl  particle.v.glsl  shader.130.f.glsl  shader.130.v.glsl  shader.f.glsl  shader.g.glsl  shader.v.glsl  shaders.qrc  vertshader.g.glsl
mesh/mesh_renderer/src/: glwidget.cpp  main.cpp  mainwindow.cpp  plylib.cpp
openvdb/get_bbox/: CMakeLists.txt
openvdb/gradientstencil/: CMakeLists.txt
openvdb/gradientstencil/include/: Stencils.h
openvdb/gradientstencil/src/: main.cpp
openvdb/hello_world/: CMakeLists.txt
openvdb/hello_world/src/: main.cpp
openvdb/mesh2voxel/: CMakeLists.txt
openvdb/mesh2voxel/include/: trianglemesh.h
openvdb/mesh2voxel/src/: trianglemesh.cpp
openvdb/obj2vdb/: CMakeLists.txt
openvdb/obj2vdb/src/: main.cpp
openvdb/trellis_generator/: CMakeLists.txt
openvdb/trellis_generator/include/: trellis.hpp  trellis_generator.hpp
openvdb/trellis_generator/src/: main.cpp  trellis.cpp  trellis_generator.cpp
sim/mass-spring/: CMakeLists.txt
sim/mass-spring/include/: glwidget.h  mass_spring_system.h  mass_spring_system.hpp
sim/mass-spring/src/: glwidget.cpp  main.cpp  mass_spring_system.cpp
src/: linereader.cpp
templates/qwindow/: CMakeLists.txt
templates/qwindow/include/: window.h
templates/qwindow/src/: main.cpp  window.cpp
tests/: CMakeLists.txt  build.sh  embedded_grid_test.cpp  grid_iteration_test.cpp  grid_lerp_test.cpp  grid_test.cpp  mesh_compile.cpp  mesh_radial.cpp  sphere.hpp  spherical_harmonics.hpp  vdb_conversion_test.cpp
tools/: CMakeLists.txt
tools/grid_renderer/: CMakeLists.txt
tools/grid_viewer/: CMakeLists.txt
tools/grid_viewer/src/: glwidget.cpp
tools/include/: line_renderer.hpp  mesh_renderer.hpp  renderer.hpp  scene_renderer.hpp  shader_program.hpp
tools/mesh_renderer/: CMakeLists.txt
tools/mesh_renderer/include/: glwidget.h  scene.h
tools/mesh_renderer/resources/120/: 120_shaders.qrc  basic.v.glsl  phong.f.glsl  wireframe.f.glsl
tools/mesh_renderer/resources/410/: 410_shaders.qrc  basic.v.glsl  phong.f.glsl  texture.f.glsl  textured.v.glsl  wireframe.f.glsl
tools/mesh_renderer/src/: glwidget.cpp  main.cpp  scene.cpp
tools/sampling_example/: CMakeLists.txt  main.cpp
tools/src/: imgui_impl.cpp  line_renderer.cpp  mesh_renderer.cpp  renderer.cpp  scene_renderer.cpp  shader_program.cpp  visualization_client.cpp  voronoi_test.cpp
(+74 files in other folders)
