ENABLE_TESTING()

FILE(GLOB TESTFILES
    "${CMAKE_CURRENT_SOURCE_DIR}/*cpp"
    )

FOREACH(TESTFILEPATH ${TESTFILES})
    GET_FILENAME_COMPONENT(FILENAME ${TESTFILEPATH} NAME)
    MESSAGE(STATUS ${FILENAME})
    STRING(REPLACE ".cpp" "" TESTNAME ${FILENAME})
    MESSAGE(STATUS ${TESTNAME})

    ADD_EXECUTABLE(${TESTNAME} ${TESTFILEPATH})
    TARGET_LINK_LIBRARIES(${TESTNAME} mtaoGraphics)
    SET(TOTAL_TESTS ${TOTAL_TESTS} ${TESTNAME})

    ADD_TEST(${TESTNAME} ${TESTNAME})

ENDFOREACH(TESTFILEPATH ${TESTFILES})

TARGET_LINK_LIBRARIES(vdb_conversion_test openvdb tbb Half)

MESSAGE(STATUS ${TOTAL_TESTS})

ADD_CUSTOM_TARGET(check COMMAND ${CMAKE_CTEST_COMMAND} DEPENDS ${TOTAL_TESTS})
